--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     <section class="home" id="home">
         <div class="homeContent">
             <h2>Top-Tier Baking Essentials</h2>
-            <p>Explore quality ingredients to elevate your baking experience. From flour to frosting, find everything you need for a delicious masterpiece. Start your culinary journey with us!</p>
+            <p>Explore quality ingredients to elevate your baking experience. From flour to frosting, find everything
+                you need for a delicious masterpiece. Start your culinary journey with us!</p>
             <div class="home-btn">
                 <a href="#product"><button>see more</button></a>
             </div>
@@ -67,10 +68,10 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide box">
                     <div class="img">
-                        <img src="images/cake1.png" alt="">
+                        <img src="images/yeast.jpg" alt="">
                     </div>
                     <div class="product-content">
-                        <h3>Chocolate</h3>
+                        <h3>Yeast-instant & 2 in one</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
                         </p>
                         <div class="orderNow">
@@ -80,10 +81,10 @@
                 </div>
                 <div class="swiper-slide box">
                     <div class="img">
-                        <img src="images/cake1.png" alt="">
+                        <img src="images/frosting.jpg" alt="">
                     </div>
                     <div class="product-content">
-                        <h3>Chocolate</h3>
+                        <h3>Frosting</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
                         </p>
                         <div class="orderNow">
@@ -93,10 +94,10 @@
                 </div>
                 <div class="swiper-slide box">
                     <div class="img">
-                        <img src="images/cake1.png" alt="">
+                        <img src="images/sodium sacchrin.jpg" alt="">
                     </div>
                     <div class="product-content">
-                        <h3>Chocolate</h3>
+                        <h3>Sodium Saccharin</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
                         </p>
                         <div class="orderNow">
@@ -106,10 +107,23 @@
                 </div>
                 <div class="swiper-slide box">
                     <div class="img">
-                        <img src="images/cake2.png" alt="">
+                        <img src="images/icing-sugar-a1a5ea2-scaled.jpg" alt="">
                     </div>
                     <div class="product-content">
-                        <h3>Chocolate</h3>
+                        <h3>Icing Sugar</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
+                        </p>
+                        <div class="orderNow">
+                            <button>Order Now </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide box">
+                    <div class="img">
+                        <img src="images/cream.webp" alt="">
+                    </div>
+                    <div class="product-content">
+                        <h3>Whipping Cream</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
                         </p>
                         <div class="orderNow">
@@ -125,10 +139,10 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide box">
                     <div class="img">
-                        <img src="images/cake1.png" alt="">
+                        <img src="images/potassium sorbate.jpg" alt="">
                     </div>
                     <div class="product-content">
-                        <h3>Chocolate</h3>
+                        <h3>Potassium Sorbate</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
                         </p>
                         <div class="orderNow">
@@ -138,10 +152,10 @@
                 </div>
                 <div class="swiper-slide box">
                     <div class="img">
-                        <img src="images/cake1.png" alt="">
+                        <img src="images/yeast.jpg" alt="">
                     </div>
                     <div class="product-content">
-                        <h3>Chocolate</h3>
+                        <h3>Yeast-instant & 2 in one</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
                         </p>
                         <div class="orderNow">
@@ -151,10 +165,10 @@
                 </div>
                 <div class="swiper-slide box">
                     <div class="img">
-                        <img src="images/cake1.png" alt="">
+                        <img src="images/extracts.jpg" alt="">
                     </div>
                     <div class="product-content">
-                        <h3>Chocolate</h3>
+                        <h3>Extracts</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
                         </p>
                         <div class="orderNow">
@@ -164,10 +178,23 @@
                 </div>
                 <div class="swiper-slide box">
                     <div class="img">
-                        <img src="images/cake2.png" alt="">
+                        <img src="images/caky.jpg" alt="">
                     </div>
                     <div class="product-content">
-                        <h3>Chocolate</h3>
+                        <h3>Fruit Cake</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
+                        </p>
+                        <div class="orderNow">
+                            <button>Order Now </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide box">
+                    <div class="img">
+                        <img src="images/sprinks.webp" alt="">
+                    </div>
+                    <div class="product-content">
+                        <h3>Filling & Decorations</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
                         </p>
                         <div class="orderNow">
@@ -190,10 +217,10 @@
             <div class="swiper-wrapper">
                 <div class=" swiper-slide box">
                     <div class="img">
-                        <img src="images/blog-img1.png" alt="">
+                        <img src="images/assortment-pieces-cake.jpg" alt="">
                     </div>
                     <div class="content">
-                        <h3>Caramel Bourbon Vanilla Cupcakes </h3>
+                        <h3>Flavors </h3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi dolorum voluptatum
                             corporis accusamus aperiam fugiat tempora blanditiis labore dolor aliquid maxime nobis
                             laborum sed soluta voluptatibus aspernatur natus, dicta quisquam.</p>
@@ -204,10 +231,10 @@
                 </div>
                 <div class=" swiper-slide box">
                     <div class="img">
-                        <img src="images/blog-img2.png" alt="">
+                        <img src="images/pastry.jpeg" alt="">
                     </div>
                     <div class="content">
-                        <h3>Caramel Bourbon Vanilla Cupcakes </h3>
+                        <h3>Pastry </h3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi dolorum voluptatum
                             corporis accusamus aperiam fugiat tempora blanditiis labore dolor aliquid maxime nobis
                             laborum sed soluta voluptatibus aspernatur natus, dicta quisquam.</p>
@@ -218,10 +245,80 @@
                 </div>
                 <div class=" swiper-slide box">
                     <div class="img">
-                        <img src="images/blog-img2.png" alt="">
+                        <img src="images/piping bags.jpg" alt="">
                     </div>
                     <div class="content">
-                        <h3>Caramel Bourbon Vanilla Cupcakes </h3>
+                        <h3>Piping bags and noozles </h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi dolorum voluptatum
+                            corporis accusamus aperiam fugiat tempora blanditiis labore dolor aliquid maxime nobis
+                            laborum sed soluta voluptatibus aspernatur natus, dicta quisquam.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam ab ullam reiciendis sint
+                            eaque at.</p>
+                        <a href="#blogs" class="btn">learn more</a>
+                    </div>
+                </div>
+                <div class=" swiper-slide box">
+                    <div class="img">
+                        <img src="images/scale.jpg" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Scales </h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi dolorum voluptatum
+                            corporis accusamus aperiam fugiat tempora blanditiis labore dolor aliquid maxime nobis
+                            laborum sed soluta voluptatibus aspernatur natus, dicta quisquam.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam ab ullam reiciendis sint
+                            eaque at.</p>
+                        <a href="#blogs" class="btn">learn more</a>
+                    </div>
+                </div>
+                <div class=" swiper-slide box">
+                    <div class="img">
+                        <img src="images/sieve.jpeg" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Sieves </h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi dolorum voluptatum
+                            corporis accusamus aperiam fugiat tempora blanditiis labore dolor aliquid maxime nobis
+                            laborum sed soluta voluptatibus aspernatur natus, dicta quisquam.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam ab ullam reiciendis sint
+                            eaque at.</p>
+                        <a href="#blogs" class="btn">learn more</a>
+                    </div>
+                </div>
+                <div class=" swiper-slide box">
+                    <div class="img">
+                        <img src="images/smoother.jpg" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Icing Smoother </h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi dolorum voluptatum
+                            corporis accusamus aperiam fugiat tempora blanditiis labore dolor aliquid maxime nobis
+                            laborum sed soluta voluptatibus aspernatur natus, dicta quisquam.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam ab ullam reiciendis sint
+                            eaque at.</p>
+                        <a href="#blogs" class="btn">learn more</a>
+                    </div>
+                </div>
+                <div class=" swiper-slide box">
+                    <div class="img">
+                        <img src="images/mixing bowl.jpg" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Mixing Bowls </h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi dolorum voluptatum
+                            corporis accusamus aperiam fugiat tempora blanditiis labore dolor aliquid maxime nobis
+                            laborum sed soluta voluptatibus aspernatur natus, dicta quisquam.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam ab ullam reiciendis sint
+                            eaque at.</p>
+                        <a href="#blogs" class="btn">learn more</a>
+                    </div>
+                </div>
+                <div class=" swiper-slide box">
+                    <div class="img">
+                        <img src="images/measuring s.jpg" alt="">
+                    </div>
+                    <div class="content">
+                    <h3>Measuring cups & spoons</h3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi dolorum voluptatum
                             corporis accusamus aperiam fugiat tempora blanditiis labore dolor aliquid maxime nobis
                             laborum sed soluta voluptatibus aspernatur natus, dicta quisquam.</p>
@@ -231,12 +328,11 @@
                     </div>
                 </div>
             </div>
+            <div class="swiper-pagination"></div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
-            <div class="swiper-pagination"></div>
-
-
         </div>
+
     </section>
 
     <!-- blogs section ends here  -->
@@ -315,6 +411,7 @@
                 <div class="swiper-pagination"></div>
 
             </div>
+
         </div>
     </section>
     <!-- review section ends here  -->
