--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
                         </p>
                         <div class="orderNow">
-                            <button>Order Now </button>
+                            <a href="#contact"><button>Order Now</button></a>
                         </div>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
                         </p>
                         <div class="orderNow">
-                            <button>Order Now </button>
+                            <a href="#contact"><button>Order Now</button></a>
                         </div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
                         </p>
                         <div class="orderNow">
-                            <button>Order Now </button>
+                            <a href="#contact"><button>Order Now</button></a>
                         </div>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
                         </p>
                         <div class="orderNow">
-                            <button>Order Now </button>
+                            <a href="#contact"><button>Order Now</button></a>
                         </div>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
                         </p>
                         <div class="orderNow">
-                            <button>Order Now </button>
+                            <a href="#contact"><button>Order Now</button></a>
                         </div>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
                         </p>
                         <div class="orderNow">
-                            <button>Order Now </button>
+                            <a href="#contact"><button>Order Now</button></a>
                         </div>
                     </div>
                 </div>
@@ -159,7 +159,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
                         </p>
                         <div class="orderNow">
-                            <button>Order Now </button>
+                            <a href="#contact"><button>Order Now</button></a>
                         </div>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
                         </p>
                         <div class="orderNow">
-                            <button>Order Now </button>
+                            <a href="#contact"><button>Order Now</button></a>
                         </div>
                     </div>
                 </div>
@@ -185,7 +185,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
                         </p>
                         <div class="orderNow">
-                            <button>Order Now </button>
+                            <a href="#contact"><button>Order Now</button></a>
                         </div>
                     </div>
                 </div>
@@ -198,7 +198,8 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci reiciendis assumenda.
                         </p>
                         <div class="orderNow">
-                            <button>Order Now </button>
+                            <a href="#contact"><button>Order Now</button></a>
+
                         </div>
                     </div>
                 </div>
@@ -226,7 +227,7 @@
                             laborum sed soluta voluptatibus aspernatur natus, dicta quisquam.</p>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam ab ullam reiciendis sint
                             eaque at.</p>
-                        <a href="#blogs" class="btn">learn more</a>
+                        <a href="#contact" class="btn">Call now!</a>
                     </div>
                 </div>
                 <div class=" swiper-slide box">
@@ -240,7 +241,7 @@
                             laborum sed soluta voluptatibus aspernatur natus, dicta quisquam.</p>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam ab ullam reiciendis sint
                             eaque at.</p>
-                        <a href="#blogs" class="btn">learn more</a>
+                        <a href="#contact" class="btn">Call now!</a>
                     </div>
                 </div>
                 <div class=" swiper-slide box">
@@ -254,7 +255,7 @@
                             laborum sed soluta voluptatibus aspernatur natus, dicta quisquam.</p>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam ab ullam reiciendis sint
                             eaque at.</p>
-                        <a href="#blogs" class="btn">learn more</a>
+                        <a href="#contact" class="btn">Call now!</a>
                     </div>
                 </div>
                 <div class=" swiper-slide box">
@@ -268,7 +269,7 @@
                             laborum sed soluta voluptatibus aspernatur natus, dicta quisquam.</p>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam ab ullam reiciendis sint
                             eaque at.</p>
-                        <a href="#blogs" class="btn">learn more</a>
+                        <a href="#contact" class="btn">Call now!</a>
                     </div>
                 </div>
                 <div class=" swiper-slide box">
@@ -282,7 +283,7 @@
                             laborum sed soluta voluptatibus aspernatur natus, dicta quisquam.</p>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam ab ullam reiciendis sint
                             eaque at.</p>
-                        <a href="#blogs" class="btn">learn more</a>
+                        <a href="#contact" class="btn">Call now!</a>
                     </div>
                 </div>
                 <div class=" swiper-slide box">
@@ -296,7 +297,7 @@
                             laborum sed soluta voluptatibus aspernatur natus, dicta quisquam.</p>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam ab ullam reiciendis sint
                             eaque at.</p>
-                        <a href="#blogs" class="btn">learn more</a>
+                        <a href="#contact" class="btn">Call now!</a>
                     </div>
                 </div>
                 <div class=" swiper-slide box">
@@ -310,7 +311,7 @@
                             laborum sed soluta voluptatibus aspernatur natus, dicta quisquam.</p>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam ab ullam reiciendis sint
                             eaque at.</p>
-                        <a href="#blogs" class="btn">learn more</a>
+                        <a href="#contact" class="btn">Call now!</a>
                     </div>
                 </div>
                 <div class=" swiper-slide box">
@@ -318,19 +319,21 @@
                         <img src="images/measuring s.jpg" alt="">
                     </div>
                     <div class="content">
-                    <h3>Measuring cups & spoons</h3>
+                        <h3>Measuring cups & spoons</h3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi dolorum voluptatum
                             corporis accusamus aperiam fugiat tempora blanditiis labore dolor aliquid maxime nobis
                             laborum sed soluta voluptatibus aspernatur natus, dicta quisquam.</p>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam ab ullam reiciendis sint
                             eaque at.</p>
-                        <a href="#blogs" class="btn">learn more</a>
+                        <a href="#contact" class="btn">Call now!</a>
                     </div>
                 </div>
             </div>
             <div class="swiper-pagination"></div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-pagination"></div>
+
+
         </div>
 
     </section>
@@ -462,6 +465,17 @@
             </div>
 
         </div>
+         <!-- newsletter section start here  -->
+
+    <section class="newsletter">
+        <form action="">
+            <h3>subscribe for latest update</h3>
+            <input type="email" name="" placeholder="enter your email" id="" class="box">
+            <input type="button" value="subscribe" class="box2">
+        </form>
+    </section>
+    <!-- newsletter section ends here  -->
+    <!-- footer section start here  -->
         <div class="share">
             <a href="#" class="fab fa-facebook-f"></a>
             <a href="#" class="fab fa-twitter"></a>
